cluster/manifests/mattermost/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mattermost
  labels:
    name: mattermost
    # vitess-operator creates pods without restricted security contexts
    pod-security.kubernetes.io/enforce: baseline
