cluster/manifests/mattermost/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: mattermost
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mattermost
      app.kubernetes.io/component: ""
  mtls:
    mode: STRICT
