cluster/manifests/mattermost/overlays/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mattermost-vitess
spec:
  selector:
    planetscale.com/component: vtgate
  ports:
    - name: tcp
      port: 3306
      protocol: TCP
      targetPort: 3306
