cluster/manifests/mattermost/overlays/dev/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: mattermost
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - mattermost.minikube.127.0.0.1.nip.io
        - mattermost.kaidotio.dev
      port:
        number: 80
        name: http
        protocol: HTTP
