cluster/manifests/mattermost/overlays/dev/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: mattermost
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: mattermost
      app.kubernetes.io/component: ""
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
        - default/kubernetes.default.svc.cluster.local
        - default/etcd.default.svc.cluster.local
        - ./mattermost.mattermost.svc.cluster.local
        - ./mattermost-gitlab-sso-bridge.mattermost.svc.cluster.local
        - ./mattermost-vitess.mattermost.svc.cluster.local
