cluster/manifests/mattermost/overlays/dev/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-envoy-stats-scrape
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 15020
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-agent
spec:
  podSelector:
    matchLabels:
      telepresence.io/workloadEnabled: "true"
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 9900
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mattermost
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mattermost
      app.kubernetes.io/component: ""
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: istio-gateways
      ports:
        - protocol: TCP
          port: 8065
        - protocol: TCP
          port: 8080
    - from:
        - namespaceSelector:
            matchLabels:
              name: mimir
          podSelector:
            matchLabels:
              app.kubernetes.io/name: mimir
              app.kubernetes.io/component: alertmanager
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mattermost-gitlab-sso-bridge
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mattermost
      app.kubernetes.io/component: gitlab-sso-bridge
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: istio-gateways
      ports:
        - protocol: TCP
          port: 8080
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: mattermost
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mattermost-vitess
spec:
  podSelector:
    matchLabels:
      planetscale.com/cluster: mattermost
  ingress:
    - from:
        - podSelector:
            matchLabels:
              planetscale.com/cluster: mattermost
      ports:
        - protocol: TCP
          port: 2379
        - protocol: TCP
          port: 2380
        - protocol: TCP
          port: 3306
        - protocol: TCP
          port: 15000
        - protocol: TCP
          port: 15999
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: mattermost
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 3306
    - from:
        - namespaceSelector:
            matchLabels:
              name: vitess-operator
          podSelector:
            matchLabels:
              app.kubernetes.io/name: vitess-operator
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 2379
        - protocol: TCP
          port: 15999
